# LooperPlugin

./: .clangd  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  postcreate.sh
Source/: Looper.cpp  Looper.h  LooperView.cpp  LooperView.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Models/: Looper.cpp  Looper.h  Track.cpp  Track.h  TrackManager.cpp  TrackManager.h
Source/Views/: GlobalControlBar.cpp  GlobalControlBar.h  LoopWaveform.cpp  LoopWaveform.h  TrackContainer.cpp  TrackContainer.h  TrackView.cpp  TrackView.h
Tests/: test_looper.cpp  test_main.cpp
